--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-protobuf": "^3.5.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "mysql": "latest"
   }
 }
